--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -4,23 +4,23 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="org.rika.hermesito.Transaction">
+    tools:context="org.rika.hermesito.TransactionActivity">
 
-    <TextView android:text="@string/title_activity_transaction" android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:background="#ff028300"
-        android:textColor="#ffffffff"
-        android:textStyle="bold"
-        android:padding="10dp"
-        android:id="@+id/textView" />
+    <!--<TextView android:text="@string/title_activity_transaction" android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="20dp"-->
+        <!--android:background="#ff028300"-->
+        <!--android:textColor="#ffffffff"-->
+        <!--android:textStyle="bold"-->
+        <!--android:padding="10dp"-->
+        <!--android:id="@+id/textView" />-->
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/transaction_date"
-        android:id="@+id/textView2"
-        android:layout_above="@+id/editText2"
+        android:id="@+id/transaction_date_label"
+        android:layout_alignBottom="@+id/transaction_date"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -29,17 +29,18 @@
         android:layout_height="wrap_content"
         android:inputType="date"
         android:ems="10"
-        android:id="@+id/editText"
-        android:layout_below="@+id/textView"
-        android:layout_toRightOf="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3" />
+        android:id="@+id/transaction_date"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/textView4"
+        android:layout_alignRight="@+id/transaction_cost"
+        android:layout_alignEnd="@+id/transaction_cost" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/transaction_time"
         android:id="@+id/textView3"
-        android:layout_alignBottom="@+id/editText2"
+        android:layout_alignBottom="@+id/transaction_time"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -48,10 +49,12 @@
         android:layout_height="wrap_content"
         android:inputType="time"
         android:ems="10"
-        android:id="@+id/editText2"
-        android:layout_below="@+id/editText"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText" />
+        android:id="@+id/transaction_time"
+        android:layout_below="@+id/transaction_date"
+        android:layout_alignLeft="@+id/transaction_date"
+        android:layout_alignStart="@+id/transaction_date"
+        android:layout_alignRight="@+id/transaction_date"
+        android:layout_alignEnd="@+id/transaction_date" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -69,8 +72,8 @@
         android:id="@+id/editText3"
         android:layout_alignBottom="@+id/textView4"
         android:layout_toRightOf="@+id/textView4"
-        android:layout_alignRight="@+id/editText2"
-        android:layout_alignEnd="@+id/editText2" />
+        android:layout_alignRight="@+id/transaction_time"
+        android:layout_alignEnd="@+id/transaction_time" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -87,17 +90,17 @@
         android:layout_height="wrap_content"
         android:id="@+id/editText4"
         android:layout_below="@+id/textView5"
+        android:layout_toLeftOf="@+id/transaction_cost"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="175px"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/editText5"
+        android:id="@+id/transaction_cost"
         android:layout_alignTop="@+id/editText4"
-        android:layout_toRightOf="@+id/editText4"
         android:layout_toLeftOf="@+id/button3"
         android:layout_toStartOf="@+id/button3" />
 
@@ -107,9 +110,10 @@
         android:layout_height="wrap_content"
         android:text="@string/transaction_add_item"
         android:id="@+id/button3"
-        android:layout_alignBottom="@+id/editText5"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView" />
+        android:onClick="addItem"
+        android:layout_alignBottom="@+id/transaction_cost"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -118,41 +122,41 @@
         android:id="@+id/textView6"
         android:layout_marginTop="39dp"
         android:layout_below="@+id/editText4"
-        android:layout_toLeftOf="@+id/editText6"
-        android:layout_toStartOf="@+id/editText6" />
+        android:layout_toLeftOf="@+id/transaction_subtotal"
+        android:layout_toStartOf="@+id/transaction_subtotal" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/editText6"
+        android:id="@+id/transaction_subtotal"
         android:layout_alignBottom="@+id/textView6"
-        android:layout_alignLeft="@+id/editText5"
-        android:layout_alignStart="@+id/editText5"
-        android:layout_alignRight="@+id/editText5"
-        android:layout_alignEnd="@+id/editText5" />
+        android:layout_alignLeft="@+id/transaction_cost"
+        android:layout_alignStart="@+id/transaction_cost"
+        android:layout_alignRight="@+id/transaction_cost"
+        android:layout_alignEnd="@+id/transaction_cost" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/editText7"
-        android:layout_below="@+id/editText6"
-        android:layout_alignRight="@+id/editText6"
-        android:layout_alignEnd="@+id/editText6"
-        android:layout_alignLeft="@+id/editText6"
-        android:layout_alignStart="@+id/editText6" />
+        android:id="@+id/transaction_tax"
+        android:layout_below="@+id/transaction_subtotal"
+        android:layout_alignRight="@+id/transaction_subtotal"
+        android:layout_alignEnd="@+id/transaction_subtotal"
+        android:layout_alignLeft="@+id/transaction_subtotal"
+        android:layout_alignStart="@+id/transaction_subtotal" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/transaction_tax"
         android:id="@+id/textView7"
-        android:layout_alignBottom="@+id/editText7"
-        android:layout_toLeftOf="@+id/editText7"
-        android:layout_toStartOf="@+id/editText7" />
+        android:layout_alignBottom="@+id/transaction_tax"
+        android:layout_toLeftOf="@+id/transaction_tax"
+        android:layout_toStartOf="@+id/transaction_tax" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -160,11 +164,11 @@
         android:inputType="numberDecimal"
         android:ems="10"
         android:id="@+id/editText8"
-        android:layout_below="@+id/editText7"
-        android:layout_alignRight="@+id/editText7"
-        android:layout_alignEnd="@+id/editText7"
-        android:layout_alignLeft="@+id/editText7"
-        android:layout_alignStart="@+id/editText7" />
+        android:layout_below="@+id/transaction_tax"
+        android:layout_alignRight="@+id/transaction_tax"
+        android:layout_alignEnd="@+id/transaction_tax"
+        android:layout_alignLeft="@+id/transaction_tax"
+        android:layout_alignStart="@+id/transaction_tax" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -180,9 +184,9 @@
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
         android:ems="10"
-        android:id="@+id/editText9"
+        android:id="@+id/transaction_tip"
         android:layout_alignBottom="@+id/textView9"
-        android:layout_toRightOf="@+id/textView2"
+        android:layout_toRightOf="@+id/transaction_date_label"
         android:layout_toLeftOf="@+id/textView6"
         android:layout_toStartOf="@+id/textView6" />
 
@@ -195,6 +199,107 @@
         android:layout_alignBottom="@+id/textView8"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/transaction_add_datetime"
+        android:id="@+id/transaction_date_button"
+        android:onClick="getDatePickerDialog"
+        android:layout_above="@+id/transaction_time_button"
+        android:layout_toRightOf="@+id/transaction_cost"
+        android:layout_toEndOf="@+id/transaction_cost" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/transaction_add_datetime"
+        android:id="@+id/transaction_time_button"
+        android:onClick="getTimePickerDialog"
+        android:layout_above="@+id/textView4"
+        android:layout_toRightOf="@+id/transaction_cost"
+        android:layout_toEndOf="@+id/transaction_cost" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/transaction_submit"
+        android:id="@+id/button4"
+        android:textSize="15dp"
+        android:onClick="submit"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/textView8"
+        android:layout_alignEnd="@+id/textView8" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/transaction_acct"
+        android:id="@+id/textView"
+        android:layout_below="@+id/textView9"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="18dp" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/transaction_add_item"
+        android:id="@+id/button5"
+        android:onClick="addPayment"
+        android:layout_below="@+id/textView"
+        android:layout_toRightOf="@+id/editText8"
+        android:layout_toEndOf="@+id/editText8" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/transaction_acct"
+        android:layout_alignBottom="@+id/button5"
+        android:layout_toLeftOf="@+id/button5"
+        android:layout_toRightOf="@+id/button4"
+        android:layout_toEndOf="@+id/button4" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/acct_list_spinner"
+        android:layout_alignBottom="@+id/transaction_acct"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/transaction_acct"
+        android:layout_toStartOf="@+id/transaction_acct"
+        android:layout_alignTop="@+id/transaction_acct" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/transaction_add_datetime"
+        android:id="@+id/button6"
+        android:onClick="getLocation"
+        android:layout_alignBottom="@+id/editText3"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <!--<DatePicker-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/datePicker"-->
+        <!--android:layout_alignBottom="@+id/transaction_date"-->
+        <!--android:layout_toRightOf="@+id/transaction_date"-->
+        <!--android:layout_toEndOf="@+id/transaction_date" />-->
+
+    <!--<TimePicker-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/timePicker"-->
+        <!--android:layout_alignBottom="@+id/transaction_time"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignParentEnd="true" />-->
 
 
 </RelativeLayout>
